--- a/css/other.css
+++ b/css/other.css
@@ -24,7 +24,18 @@ body {
   z-index: 9999;
   width: 100%;
   /*height: 50px;*/
-  background-color: #00a087;
+  background-color: white;
+}
+
+a {
+ /* color: #00a087;*/
+/* color:#DEB887;*/
+ color: #D2B48C;
+/* color:#20a59a;*/
+}
+
+a:hover{
+  text-decoration: underline;
 }
 
 #logo{
@@ -33,29 +44,99 @@ body {
   background-size: cover;
   width:120px;
   height:60px;
+  margin: 0px 10px 0px 10px;
 }
 
  /* font-family: adelle;
   font-size: 14px;*/
 
 li{
+  font-family: Helvetica;
+  font-style: italic;
+  font-weight: lighter;
   font-size: 1.2em;
   display:inline;
+/*  text-decoration: none;*/
   padding-right:15px;
   padding-left: 15px;
+  float:left;
 }
+
+ li a {
+  text-decoration: none;
+}
+
+.submenu{
+  display:none;
+  font-style: normal;
+  font-size: 40px;
+  float: right;
+  margin-right: 10px;
+  color: #D2B48C;
+}
+
+
 
 #instagram{
   background-image: url(images/instagram.png);
   float:right;
   background-size: cover;
-  width:20px;
-  height:20px;
+  width:30px;
+  height:30px;
+  margin:0px 10px 0px 10px;
 }
 
 #blog{
-  background-image: url(images/blog.jpeg);
+  background-image: url(images/blog.png);
   float:right;
-  width:20px;
-  height:20px;
+  background-size: cover;
+  width:30px;
+  height:30px;
+  margin:0px 10px 0px 10px;
+}
+
+.active{
+  font-weight: bold;
+}
+
+@media screen and (max-width: 790px){
+
+ /* .submenu:before {
+    content: "≡";
+    display:inline;
+    position: absolute;
+    right: 10px;
+    color: yellow;
+    font-size: 3em;
+    margin: 0px 10px 0px 10px;
+  }*/
+
+  .submenu {
+    display: block;
+  }
+
+  .nav{
+    display:none;
+  }
+
+  #instagram{
+    display:none;
+  }
+
+  #blog{
+    display:none;
+  }
+
+/*  ul{
+    height:0;
+    transition:height 1s;
+    overflow:visable;
+  }*/
+  
+/*  .slideUp{
+    height:20em;
+  }*/
+
+ }
+
 }
