--- a/css/other.css
+++ b/css/other.css
@@ -3,6 +3,7 @@ body {
   font-size: 14px;
   line-height: 1.5;
   cursor: default;
+  background-color:#EBDECC;
 }
 
 #header{
@@ -10,28 +11,157 @@ body {
 }
 
 #text{
-  width:80%;
-  margin: auto;
+  width:70%;
+  margin:10%;
   left:0; right:0;
-  top:0; bottom:0;
+  top:10%; bottom:0;
+  text-align: center;
 }
 
+#textContact{
+  width:60%;
+  margin:15%;
+  left:0; right:0;
+  top:5%; bottom:0;
+  text-align: center;
+}
+
+.contact{
+  font-size: 2em;
+  color:white;
+  text-decoration: none;
+}
+
+.bold{
+  font-weight: bold;
+}
+
+.italic{
+  font-style: italic;
+}
+
+.center{
+  text-align: center;
+}
+
+.italic em{
+  font-style: italic;
+  font-weight: bold;
+}
+
+h3{
+  font-size: 2em;
+}
+
+#container{
+  padding-right: 10px;
+  padding-top: 10px;
+  margin-bottom:100px;
+}
+
+/*css for new picture*/
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,500);
+figure.snip1212 {
+  font-family: 'Raleway', Arial, sans-serif;
+  color: #fff;
+  position: relative;
+  float: left;
+  overflow: hidden;
+  /*margin: 10px 1%;*/
+  height:180px;
+  min-width: 220px;
+  max-width: 310px;
+  max-height: 220px;
+  width: 100%;
+  color: #000000;
+  /*background-image: -webkit-linear-gradient(top, #ffffff 0%, #000000 70%);
+  background-image: linear-gradient(to bottom, #ffffff 0%, #000000 70%);*/
+}
+
+figure.snip1212 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+
+figure.snip1212 img {
+  max-width: 100%;
+  width:310px;
+}
+
+figure.snip1212 figcaption {
+  position: absolute;
+  bottom: 0%;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+  -webkit-transform: translateY(100%);
+  transform: translateY(100%);
+}
+
+figure.snip1212 h2,
+figure.snip1212 p {
+  margin: 0;
+  width: 100%;
+  padding: 10px 20px;
+}
+
+figure.snip1212 h2 {
+  color: #ffffff;
+  position: absolute;
+  bottom: 100%;
+  display: inline-block;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+figure.snip1212 p {
+  background: rgba(255, 255, 255, 0.9);
+  text-align: right;
+  bottom: 0;
+  font-size: 0.8em;
+  font-weight: 500;
+}
+
+/*figure.snip1212 a {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  z-index: 1;
+}*/
+
+figure.snip1212:hover img,
+figure.snip1212.hover img {
+  opacity: 0.4;
+}
+
+figure.snip1212:hover figcaption,
+figure.snip1212.hover figcaption {
+  -webkit-transform: translateY(0);
+  transform: translateY(0);
+}
+
+/*end css for new picture*/
+
+
 #footer{
-  height:60px;
+  height:70px;
   position: fixed;
   bottom: 0;
   left: 0;
   z-index: 9999;
   width: 100%;
-  /*height: 50px;*/
   background-color: white;
 }
 
 a {
- /* color: #00a087;*/
-/* color:#DEB887;*/
- color: #D2B48C;
-/* color:#20a59a;*/
+ /* color: #00a087;
+/* color:#DEB887;
+/* color: #D2B48C;*/
+  color: b8a997;
 }
 
 a:hover{
@@ -39,16 +169,67 @@ a:hover{
 }
 
 #logo{
-  background-image: url(images/blacklogo.jpg);
+  background-image: url(images/whitelogo_test.jpg);
   float:left;
   background-size: cover;
   width:120px;
   height:60px;
-  margin: 0px 10px 0px 10px;
+  margin: 0px 10px 0px 20px;
 }
 
  /* font-family: adelle;
   font-size: 14px;*/
+
+  @import url(https://fonts.googleapis.com/css?family=Raleway:400,500);
+.snip1211 {
+  font-family: 'Raleway', Arial, sans-serif;
+  text-align: left;
+  float: left;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+.snip1211 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+.snip1211 li {
+  display: inline-block;
+  list-style: outside none none;
+  margin: 0.5em 1.5em;
+  padding: 0;
+}
+.snip1211 a {
+  padding: 0.3em 0;
+  color: #D2B48C;
+  position: relative;
+  text-decoration: none;
+}
+.snip1211 a:before {
+  position: absolute;
+  content: '';
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+  opacity: 0;
+  top: 25%;
+  bottom: 25%;
+  left: 0;
+  right: 0;
+  border-top: 3px solid #34495e;
+  border-bottom: 3px solid #34495e;
+}
+.snip1211 a:hover,
+.snip1211 .current a {
+  color: #D2B48C;;
+}
+.snip1211 a:hover:before,
+.snip1211 .current a:before {
+  opacity: 1;
+  top: 0;
+  bottom: 0;
+}
 
 li{
   font-family: Helvetica;
@@ -56,7 +237,6 @@ li{
   font-weight: lighter;
   font-size: 1.2em;
   display:inline;
-/*  text-decoration: none;*/
   padding-right:15px;
   padding-left: 15px;
   float:left;
@@ -76,14 +256,13 @@ li{
 }
 
 
-
 #instagram{
   background-image: url(images/instagram.png);
   float:right;
   background-size: cover;
   width:30px;
   height:30px;
-  margin:0px 10px 0px 10px;
+  margin:15px 20px 0px 10px;
 }
 
 #blog{
@@ -92,24 +271,17 @@ li{
   background-size: cover;
   width:30px;
   height:30px;
-  margin:0px 10px 0px 10px;
+  margin:15px 10px 0px 10px;
 }
 
-.active{
+
+.bold{
   font-weight: bold;
 }
 
-@media screen and (max-width: 790px){
 
- /* .submenu:before {
-    content: "≡";
-    display:inline;
-    position: absolute;
-    right: 10px;
-    color: yellow;
-    font-size: 3em;
-    margin: 0px 10px 0px 10px;
-  }*/
+
+@media screen and (max-width: 790px){
 
   .submenu {
     display: block;
@@ -127,16 +299,27 @@ li{
     display:none;
   }
 
-/*  ul{
-    height:0;
-    transition:height 1s;
-    overflow:visable;
-  }*/
-  
-/*  .slideUp{
-    height:20em;
-  }*/
+  .nav{
+    position:absolute;
+    bottom:3.25em;
+    right:.5em;
+    width:100%;
+  }
 
- }
+  .snip1211 li {
+  display: inline-block;
+  list-style: outside none none;
+  margin: 0em 1.5em;
+  padding: 0;
+  }
+
+  .nav li{
+    display:block;
+    background-color: white;
+    width:100%;
+    text-align: center;
+    padding:5px 0px 5px 0px;
+    border-bottom: 1px solid #F5F5DC;
+  }
 
 }
