--- a/css/style.css
+++ b/css/style.css
@@ -5,41 +5,27 @@ body {
   font-weight: lighter;
    /* font-family: Adelle,/* Georgia, 'Hiragino Sans GB', Arial, STXihei, 'Microsoft YaHei', sans-serif;*/
   font-size: 14px;
- /* font-weight: 100;*/
   line-height: 1.5;
   cursor: default;
-  background: url(images/Picture.jpg) center center no-repeat;
+  background: url(images/picture.jpg) center center no-repeat;
   background-size: cover;
 }
 
-/*#image{
-  background: url(images/Picture.jpg) center center no-repeat;
-  background-size: cover;
-  width:100%;
-  height:80%;
-  overflow: hidden;
-}*/
-
-/*footer{
-  height:20px;
-}*/
-
 #footer{
-  height:60px;
+  height:70px;
   position: fixed;
   bottom: 0;
   left: 0;
   z-index: 9999;
   width: 100%;
-  /*height: 50px;*/
-  background-color: white;
+  background-color:white;
 }
 
 a {
- /* color: #00a087;*/
-/* color:#DEB887;*/
- color: #D2B48C;
-/* color:#20a59a;*/
+ /* color: #00a087;
+/* color:#DEB887;
+/* color: #D2B48C;*/
+  color: b8a997;
 }
 
 a:hover{
@@ -47,13 +33,66 @@ a:hover{
 }
 
 #logo{
-  background-image: url(images/blacklogo.jpg);
+  background-image: url(images/whitelogo_test.jpg);
   float:left;
   background-size: cover;
   width:120px;
   height:60px;
-  margin: 0px 10px 0px 10px;
+  margin: 0px 10px 0px 20px;
 }
+
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,500);
+.snip1211 {
+  font-family: 'Raleway', Arial, sans-serif;
+  text-align: left;
+  float: left;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+.snip1211 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+}
+.snip1211 li {
+  display: inline-block;
+  list-style: outside none none;
+  margin: 0.5em 1.5em;
+  padding: 0;
+}
+.snip1211 a {
+  padding: 0.3em 0;
+  color: #D2B48C;
+  position: relative;
+  text-decoration: none;
+}
+.snip1211 a:before {
+  position: absolute;
+  content: '';
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+  opacity: 0;
+  top: 25%;
+  bottom: 25%;
+  left: 0;
+  right: 0;
+  border-top: 3px solid #34495e;
+  border-bottom: 3px solid #34495e;
+}
+.snip1211 a:hover,
+.snip1211 .current a {
+  color: #D2B48C;;
+}
+.snip1211 a:hover:before,
+.snip1211 .current a:before {
+  opacity: 1;
+  top: 0;
+  bottom: 0;
+}
+
+
 
  /* font-family: adelle;
   font-size: 14px;*/
@@ -61,7 +100,6 @@ a:hover{
 li{
   font-size: 1.2em;
   display:inline;
-/*  text-decoration: none;*/
   padding-right:15px;
   padding-left: 15px;
   float:left;
@@ -81,14 +119,13 @@ li{
 }
 
 
-
 #instagram{
   background-image: url(images/instagram.png);
   float:right;
   background-size: cover;
   width:30px;
   height:30px;
-  margin:0px 10px 0px 10px;
+  margin:15px 20px 0px 10px;
 }
 
 #blog{
@@ -97,24 +134,18 @@ li{
   background-size: cover;
   width:30px;
   height:30px;
-  margin:0px 10px 0px 10px;
+  margin:15px 10px 0px 10px;
 }
 
 .active{
   font-weight: bold;
 }
 
-@media screen and (max-width: 790px){
+.bold{
+  font-weight: bold;
+}
 
- /* .submenu:before {
-    content: "≡";
-    display:inline;
-    position: absolute;
-    right: 10px;
-    color: yellow;
-    font-size: 3em;
-    margin: 0px 10px 0px 10px;
-  }*/
+@media screen and (max-width: 790px){
 
   .submenu {
     display: block;
@@ -132,17 +163,29 @@ li{
     display:none;
   }
 
- ul{
-    height:0;
-    transition:height 1s;
-    overflow: hidden;
+  .nav{
+    position:absolute;
+    bottom:3.25em;
+    right:.5em;
+    width:100%;
   }
-  
-/*  .slideUp{
-    height:20em;
-  }*/
 
-  .active{
-    font-weight: bold;
- }
+  .snip1211 li {
+    display: inline-block;
+    list-style: outside none none;
+    margin: 0em 1.5em;
+    padding: 0;
+}
+
+  .nav li{
+    display:block;
+    background-color: white;
+    width:100%;
+    text-align: center;
+    padding:5px 0px 5px 0px;
+    border-bottom: 1px solid #F5F5DC;
+  }
+
+
+
 }
