--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
   font-size: 14px;
   line-height: 1.5;
   cursor: default;
-  background: url(images/picture.jpg) center center no-repeat;
+  background: url(images/background3.jpg) center center no-repeat;
   background-size: cover;
 }
 
